--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Konversi Temperatur</title>
+    </head>
+    <body>
+        <header>
+            <h1>-= Konversi Temperatur =-</h1>
+        </header>
+        
+        <section class="InputSection">
+          <label for="InputSection">Celcius</label>
+          <input type="number" id="inputField"/>
+          <div class="InputButtonSection">
+          <button>Konversi</button>
+          <button>Reset</button>
+          <button>Balik</button>
+          </div>
+        </section>
+        <section class="OutputSection">
+          <label for="OutputSection">Fahrenheit</label>
+          <input type="number" id="outputField"/>
+        </section>
+    </body>    
+</html>
